test/exercises/c-ray/c-ray.noreal.good
c-ray.chpl:92: error: pixelType must be an integral type
